# open-pos-commons

./: CMakeLists.txt  README.md  readme.md
cmake/: openpos-commons-config-version.cmake.in  openpos-commons-config.cmake
include/openpos-commons/: Product.h  ProductController.rep
rep/: ProductController.rep
src/openpos-commons/: Product.cpp
